# remech2-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yaml
docs/: displaybrightness.md  roo_task_may-19-2025_9-21-48-pm.md  timers.md
src/: ail.rs  common.rs  custom_drawmode.rs  hooker.rs  main.rs  midi_source.rs  shell.rs  sim.rs  xmi.rs
src/launcher/: cd_check.rs  dll_check.rs  mod.rs  painter.rs
src/launcher/file_check/: list.rs  mod.rs
src/shell/: mod.rs
src/shell/audio/: audio_sample.rs  audio_subsystem.rs  hooks.rs  midi_sequence.rs  mod.rs
src/shell/drawmode/: custom_drawmode.rs  hooks.rs  mod.rs  overlay_ui.rs
src/sim/: mod.rs
src/sim/drawmode/: custom_drawmode.rs  hooks.rs  mod.rs
