[package]
name = "remech2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
rand = "0.8.5"
retour = { version = "0.3.1" }
rodio = "0.19.0"
rustysynth = "1.3.1"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_Media_Multimedia",
]
