[package]
name = "remech2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
egui = { git="https://github.com/emilk/egui/", rev="34db001db14940c948eb03d3fe87f2af2c45daba" }
egui-wgpu = { git="https://github.com/emilk/egui/", rev="34db001db14940c948eb03d3fe87f2af2c45daba" }
hex-literal = "0.4.1"
pollster = "0.3.0"
rand = "0.8.5"
raw-window-handle = "0.6.2"
reqwest = "0.12.7"
retour = "0.3.1"
rodio = "0.19.0"
rustysynth = "1.3.1"
sha2 = "0.10.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
web-time = "1.1.0"
wgpu = "22.0.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_Media_Multimedia",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_Security",
]
