[package]
name = "remech2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
egui = { git = "https://github.com/emilk/egui/", rev = "4c04996a72e6dbff67db5cca6bee3682952dfc3e" }
egui-wgpu = { git = "https://github.com/emilk/egui/", rev = "4c04996a72e6dbff67db5cca6bee3682952dfc3e" }
futures-util = { version = "0.3.28", default-features = false }
hex-literal = "1.0.0"
pollster = "0.4.0"
rand = "0.9.1"
raw-window-handle = "0.6.2"
reqwest = { version = "0.12.15", features = ["stream"] }
retour = "0.3.1"
rodio = "0.20.1"
rustysynth = "1.3.1"
sha2 = "0.10.9"
tokio = { version = "1.45.0", features = ["net", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
unarc-rs = "0.4.3"
web-time = "1.1.0"
wgpu = "25.0.0"

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_Media_Multimedia",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]

[dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_Security",
]
